Update for new user setting support
